// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches starred task with conversation closed snapshot in Teams 1`] = `
<div
  draggable="true"
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-52"
    >
      <input
        aria-checked="false"
        class="input-53"
        id="checkbox-2"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-54"
        for="checkbox-2"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-55"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-59"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-60"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-starred-icon root-61"
        data-icon-name="FavoriteStarFill"
      >
        
      </i>
    </button>
    <button
      class="ms-Link Task-conversation-link root-60"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-conversation-closed-icon root-63"
        data-icon-name="Chat"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`matches unstarred task snapshot with conversation open in Teams 1`] = `
<div
  draggable="true"
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-52"
    >
      <input
        aria-checked="false"
        class="input-53"
        id="checkbox-3"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-54"
        for="checkbox-3"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-55"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-59"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-60"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-starred-icon root-61"
        data-icon-name="FavoriteStarFill"
      >
        
      </i>
    </button>
    <button
      class="ms-Link Task-conversation-link root-60"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-conversation-open-icon root-65"
        data-icon-name="ChatSolid"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`renders starred task snapshot 1`] = `
<div
  draggable="true"
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-52"
    >
      <input
        aria-checked="false"
        class="input-53"
        id="checkbox-0"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-54"
        for="checkbox-0"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-55"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-59"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-60"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-starred-icon root-61"
        data-icon-name="FavoriteStarFill"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`renders unstarred task snapshot 1`] = `
<div
  draggable="true"
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-52"
    >
      <input
        aria-checked="false"
        class="input-53"
        id="checkbox-1"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-54"
        for="checkbox-1"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-55"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-59"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-60"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-unstarred-icon root-61"
        data-icon-name="FavoriteStar"
      >
        
      </i>
    </button>
  </li>
</div>
`;
